@@ -769,6 +769,12 @@ touch with us. Meanwhile, profiling is disabled when a thread is created, and
 NYTProf tries to ignore any activity from perl interpreters other than the
 first one that loaded it.
 
+=head2 Coro
+
+The C<Devel::NYTProf> subroutine profiler gets confused by the stack gymnastics
+performed by the L<Coro> module and aborts. When profiling applications that
+use Coro you should disable the subroutine profiler using the L</subs=0> option.
+
 =head2 For perl < 5.8.8 it may change what caller() returns
 
 For example, the L<Readonly> module croaks with "Invalid tie" when profiled with
